# integRL

./: .gitignore  README.md  pyproject.toml
integrl/checkpoints/GRPO_GSM8K_LR1e5_GSTEPS200_RBS256_TBS256_EPB1_GSIZE8_GA128_LT_GC/: metrics.csv
integrl/checkpoints/GRPO_GSM8K_LR1e5_GSTEPS200_RBS256_TBS256_EPB1_GSIZE8_GA128_LT_RWB/: metrics.csv
integrl/checkpoints/SFT_GSM8K_LR1e5_WD0_BS2_GA8_GL1_E1_T0_TP095/: metrics.csv
integrl/checkpoints/SFT_GSM8K_LR1e5_WD0_BS2_GA8_GL1_E1_T1_TP095/: metrics.csv
integrl/checkpoints/SFT_GSM8K_LR1e5_WD0_BS4_GA4_GL1_E1_T0_TP095/: metrics.csv
integrl/checkpoints/SFT_GSM8K_LR1e5_WD0_BS4_GA4_GL1_E1_T1_TP095/: metrics.csv
integrl/checkpoints/SFT_GSM8K_LR1e5_WD0_BS4_GA4_GL1_E2_T0_TP095/: metrics.csv
integrl/checkpoints/SFT_GSM8K_LR2e5_WD001_BS4_GA4_GL1_E1_T0_TP095/: metrics.csv
integrl/checkpoints/SFT_GSM8K_LR2e5_WD001_BS4_GA8_GL1_E1_T0_TP095/: metrics.csv
integrl/checkpoints/SFT_GSM8K_LR3e5_WD001_BS4_GA8_GL1_E1_T0_TP095/: metrics.csv
integrl/grpo/: train.py  train_helpers.py
integrl/sft/: evals.py  train.py  train_helpers.py
integrl/sft/runs/evals/: Qwen2.5-Math-1.5B_r1_zero_1755876229.jsonl
notebooks/: evals_baseline.ipynb  evals_sft.ipynb  gsm8k_sft_data.ipynb
sft/: baseline_zero_shot.py
